--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,3 +23,12 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+h1.hero__title {
+  margin: 0;
+}
+
+h2.hero__workat {
+  font-size: 1.2rem;
+  font-style: oblique;
+}
